--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html lang="en">
+<style>
+  body {
+    background-color: black;
+  }
+</style>
 <head>
   <meta charset="utf-8">
   <title>MyTeslaDashboard</title>
